# expert-lamp

./: README.md
.github/workflows/: commercedata.yml  guildwars2api.yml  python_testing.yml
commercedata/: LICENSE  README.md  pyproject.toml  setup.cfg
commercedata/commercedata/: add_prices.py  database.py  get_resale.py  update_items.py  update_materials.py
commercedata/src/commercedata/: add_prices.py  database.py  update_items.py  update_materials.py
commercedata/test/commercialdata/: test_add_prices.py  test_database.py  test_update_items.py  test_update_materials.py
commercedata/tests/: test_add_prices.py  test_database.py  test_update_items.py  test_update_materials.py
guildwars2/: build.gradle  settings.gradle
guildwars2/src/main/java/com/senorpez/guildwars2/: BuildSession.java  EncryptedProperty.java  GetPrices.java  Report.java  UpdateAllItems.java  UpdateAllMaterials.java
guildwars2/src/main/java/com/senorpez/guildwars2/api/: APIObjectBuilder.java  (+5 more)
guildwars2/src/main/resources/: hibernate.cfg.xml
guildwars2api/: README.md  setup.cfg
guildwars2api/guildwars2api/: commerce.py  endpoint.py  items.py  materials.py
guildwars2api/src/guildwars2api/: commerce.py  endpoint.py  items.py
guildwars2api/test/guildwars2api/: mocked_requests.py  test_commerce.py  test_items.py  test_materials.py
guildwars2api/tests/: test_commerce.py  test_items.py  test_materials.py
scraper/: setup.cfg  test_simple.py
scraper/.github/workflow/: python_testing.yml
scraper/src/my_gw2api/: commerce.py
scraper/tests/my_gw2api/: test_commerce.py  test_file.py
(+12 files in other folders)
