[metadata]
name = commercedata
version = 0.0.1
author = Senor Pez
author_email = contact_at_github@example.org
description = Guild Wars 2 Commerce Data Retrieval
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SenorPez/expert-lamp
project_urls =
    Bug Tracker = https://github.com/SenorPez/expert-lamp/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src